Updated VelocitySubsystemBase and implemented toggleable debug logging